🔧 Corregir sintaxis PowerShell en workflow
- Cambiar ^ (cmd) por ` (PowerShell) para continuación de líneas
- Eliminar --add-data innecesario (script maneja rutas dinámicamente)
- Simplificar comando PyInstaller para Windows
- Corregir error de parser PowerShell

--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -28,15 +28,13 @@ jobs:
         
     - name: Compilar con PyInstaller
       run: |
-        pyinstaller ^
-          --onefile ^
-          --console ^
-          --name ProcesadorPrevired ^
-          --add-data "archivos105espacios;archivos105espacios" ^
-          --add-data "jornadas;jornadas" ^
-          --distpath . ^
-          --workpath build ^
-          --specpath build ^
+        pyinstaller `
+          --onefile `
+          --console `
+          --name ProcesadorPrevired `
+          --distpath . `
+          --workpath build `
+          --specpath build `
           procesar_archivos_windows.py
           
     - name: Verificar ejecutable
